--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
     font-family: 'Mansalva', cursive;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -10,19 +13,22 @@ header, footer {
     position: relative;
     left: 25%;
     border: 2px solid orange;
-    width: 700px;
+    width: 650px;
+    margin: 20px 0px;
 }
 
 #many_items {
     border: 2px solid darkblue;
-    height: 500px;
-    width: 700px;
+    height: 450px;
+    width: 650px;
     position: relative;
     left: 25%;
+    padding: 10px 0 10px 5px;
 }
 
 .item {
     display: inline-block;
+    margin: 5px;
     border: 2px solid darkblue;
     height: 200px;
     width: 200px;
@@ -41,10 +47,11 @@ header, footer {
     height: 50px;
     width: 196px;
     position: relative;
-    top: 92px;
+    top: 96px;
 }
 
 #item_1{
     background-image: url(https://image.shutterstock.com/image-photo/cactus-planted-flowerpot-260nw-1442807978.jpg);
+    background-size: cover;
     background-position: center;
 }
