--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ header {
     display: inline-block;
     margin: 5px;
     border: 2px solid darkblue;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     height: 200px;
     width: 200px;
 }
 
 .sales {
     border: 2px solid yellow;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     text-align: center;
     line-height: 50px;
     height: 50px;
@@ -52,12 +52,25 @@ header {
     left: 75px;
 }
 
+.yes_please {
+    border: 2px solid yellow;
+    /* border-radius: 50%; */
+    text-align: center;
+    line-height: 50px;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    left: 75px;
+    top: 25px;
+}
+
 .description {
     border: 2px solid pink;
+    border-radius:
     height: 50px;
-    width: 196px;
+    width: 200px;
     position: relative;
-    top: 96px;
+    top: 70px;
 }
 
 #item_1{
