--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    text-align: center;
 }
 
 body {
@@ -15,62 +16,71 @@ header, footer, #many_items {
 }
 
 header, footer {
-    border: 2px solid orange;
     width: 650px;
     margin: 20px 0px;
 }
 
 header {
-    text-align: center;
     font-size: 150%;
 }
 
 #many_items {
-    border: 2px solid darkblue;
     height: 450px;
     width: 650px;
     padding: 10px 0 10px 5px;
+    z-index: 10;
 }
 
 .item {
     display: inline-block;
     margin: 5px;
     border: 2px solid darkblue;
-    /* border-radius: 50%; */
+    border-radius: 50%;
     height: 200px;
     width: 200px;
 }
 
 .sales {
     border: 2px solid yellow;
-    /* border-radius: 50%; */
-    text-align: center;
+    border-radius: 50%;
     line-height: 50px;
     height: 50px;
     width: 50px;
     position: relative;
     left: 75px;
+    z-index: 20;
 }
 
 .yes_please {
-    border: 2px solid yellow;
-    /* border-radius: 50%; */
-    text-align: center;
+    visibility: visible;
+    border: 2px solid rgb(2, 230, 195);
+    border-radius: 50%;
+    background-color: rgb(2, 230, 195);
+    color: white;
+    font-size: 200%;
     line-height: 50px;
     height: 50px;
     width: 50px;
     position: relative;
     left: 75px;
     top: 25px;
+    z-index: 20;
+}
+
+.yes_please:hover {
+    visibility: hidden;
+    z-index: 20;
 }
 
 .description {
     border: 2px solid pink;
-    border-radius:
-    height: 50px;
+    border-radius: 0 25px;
+    height: 25px;
     width: 200px;
+    line-height: 12px;
     position: relative;
-    top: 70px;
+    top: 75px;
+    z-index: 20;
 }
 
 #item_1{
